infra/k8s/log-message-processor.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-message-processor
  namespace: microservices
spec:
  selector:
    matchLabels:
      app: log-message-processor
  replicas: 1
  template:
    metadata:
      labels:
        app: log-message-processor
    spec:
      containers:
      - name: log-message-processor
        image: log-message-processor:latest
        imagePullPolicy: Never
        resources:
          limits:
            memory: "128Mi"
            cpu: "100m"
---
apiVersion: v1
kind: Service
metadata:
  name: log-message-processor
  namespace: microservices
spec:
  selector:
    app: log-message-processor
  ports:
  - port: 8080
    targetPort: 8080
  type: ClusterIP
